--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <!-- header -->
     <header>
-        <div class="headerTitre">
-            <h1>Sophygène</h1>
-            <p>Dératisation, désinsectisation, traîtement anti Covid-19</p>
+        <div class="headerTitle">
+            <img src="images/logoFull.png" class="headerTitle_logo"/>
+            <h1 class="headerTitle_text">Dératisation, désinsectisation, traîtement anti Covid-19</h1>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" class="iconArrowSearch" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" class="iconArrowSearch" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-        </svg>
+        </svg> -->
     </header>
 
     <!-- main -->
