--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
     <title>Sophygène</title>
 </head>
 <body>
+    <!-- navbar -->
+    <div class="navbar">
+        <div class="navbar_leftSide">
+            <p class="navbar_leftSide_menu navbar_leftSide_menu-about">À propos</p>
+            <p class="navbar_leftSide_menu navbar_leftSide_menu-work">Nos produits</p>
+            <p class="navbar_leftSide_menu navbar_leftSide_menu-contact">Contact</p>
+        </div>
+        <div class="navbar_middleSide">
+            <img src="./images/logoCropped.png"  class="navbar_middleSide-logo"/>
+        </div>
+        <div class="navbar_rightSide">
+            <img src="./images/whatsapp.png" class="navbar_rightSide-logo" />
+            <p class="navbar_rightSide-number">06 66 66 66 66</p>
+        </div>
+    </div>
     <!-- header -->
     <header>
         <div class="headerTitle">
             <img src="images/logoFull.png" class="headerTitle_logo"/>
             <h1 class="headerTitle_text">Dératisation, désinsectisation, traîtement anti Covid-19</h1>
         </div>
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" class="iconArrowSearch" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="headerArrow" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-        </svg> -->
+        </svg>
     </header>
 
     <!-- main -->
@@ -24,7 +39,6 @@
         <section class="quisommesnous"></section>
         <section class="disponibilite"></section>
         <section class="contact"></section>
-        <section class="navbar"></section>
     </main>
 
     <!-- footer -->
