style: ready for mobile device

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- navbar -->
     <div class="navbar navbar-hide">
         <div class="navbar_leftSide">
-            <p class="navbar_leftSide_menu navbar_leftSide_menu-about">À propos</p>
-            <p class="navbar_leftSide_menu navbar_leftSide_menu-work">Nos produits</p>
-            <p class="navbar_leftSide_menu navbar_leftSide_menu-contact">Contact</p>
+            <a href="#about"> <p class="navbar_leftSide_menu navbar_leftSide_menu-about">À propos</p> </a>
+            <a href="#work"> <p class="navbar_leftSide_menu navbar_leftSide_menu-work">Nos traîtements</p> </a>
+            <a href="#contact"> <p class="navbar_leftSide_menu navbar_leftSide_menu-contact">Contact</p> </a>
         </div>
         <div class="navbar_middleSide">
             <img src="./images/logoCropped.png"  class="navbar_middleSide-logo"/>
@@ -28,12 +28,13 @@
         <div class="headerTitle">
             <img src="images/logoFull.png" class="headerTitle_logo"/>
             <h1 class="headerTitle_text">Dératisation, désinsectisation, traîtement anti Covid-19</h1>
+            <a href="#about">
+                <svg xmlns="http://www.w3.org/2000/svg" class="headerArrow" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+                </svg>
+            </a>
         </div>
-        <a href="#about">
-            <svg xmlns="http://www.w3.org/2000/svg" class="headerArrow" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-            </svg>
-        </a>
+        
         
     </header>
 
@@ -42,38 +43,39 @@
         <!-- about -->
         <section class="about" id="about">
             <h2 class="about-title">Qui sommes-nous ?</h2>
-            <p class="about-text">Lorem ipsum dolor sit amet <strong>adipisicing</strong> elit. Voluptatem quia delectus hic laudantium. A modi fuga nesciunt culpa eligendi totam <strong>consequatur</strong> eum quae sit facere, qui deleniti quo quisquam cum similique aperiam quod, praesentium repellat quidem tenetur? Consectetur <strong>consequatur</strong> mollitia sed impedit corrupti autem aut ex! Necessitatibus sint quo aliquid impedit qui deserunt porro harum quia quis ipsa totam reprehenderit, fugiat enim quidem eaque ratione. Delectus quibusdam nesciunt reprehenderit. Harum, sapiente ut. Assumenda minus id, aut ipsa similique perspiciatis dolorum illum eligendi dolorem tempora saepe, itaque reiciendis autem molestiae consectetur iusto quod quia. Numquam magni voluptate <strong>consequatur</strong> beatae excepturi perferendis consectetur laborum!</p>
+            <p class="about-text">Lorem ipsum dolor sit amet <strong>adipisicing</strong> elit. Voluptatem quia delectus hic laudantium. A modi fuga nesciunt culpa eligendi totam <strong>consequatur</strong> eum quae sit facere, qui deleniti quo quisquam repellat quidem tenetur? Consectetur <strong>consequatur</strong> mollitia sed impedit corrupti autem aut ex! Necessitatibus sint quo aliquid impedit qui deserunt porro harum quia quis ipsa totam reprehenderit, fugiat enim quidem eaque nesciunt reprehenderit. Harum, sapiente ut. Assumenda minus id, aut ipsa similique perspiciatis dolorum illum eligendi dolorem Numquam magni voluptate <strong>consequatur</strong> beatae excepturi perferendis consectetur laborum!</p>
             <div class="about-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d827.7820482562531!2d-6.917776170776893!3d33.912100111765795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x728ad19050d94103!2zMzPCsDU0JzQzLjYiTiA2wrA1NScwMi4wIlc!5e0!3m2!1sfr!2sma!4v1655469542642!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
         <!-- product -->
-        <section class="product">
+        <section class="product" id="work">
             <h2 class="product-title">Nos traîtements</h2>
             <p class="product-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates rerum optio, soluta inventore id mollitia adipisci, at nemo beatae cumque accusantium quasi corporis magnam iure?</p>
             <ul class="product-list">
-                <li><span>Traîtement Anti-puces</span></li>
-                <li><span>Traîtement contre cafard</span></li>
-                <li><span>Désinfection parasitaire</span></li>
-                <li><span>Covid safty</span></li>
+                <li><span>Dératisation - (rats, serpents, taupes etc.)</span></li>
+                <li><span>Désinsectisation - (cafards, blattes, moustiques etc.)</span></li>
+                <li><span>Capture des chiens et chats érrants</span></li>
+                <li><span>Dépigeonnisation - (pigeons et autres volatiles)</span></li>
+                <li><span>Désinfection - (stérilisation, traîtement anti-covid19 etc.)</span></li>
             </ul>
         </section>
         <!-- contact -->
-        <section class="contact">
+        <section class="contact" id="contact">
             <h2 class="contact-title">Contact</h2>
             <div class="contact-linkContainer">
                 <div class="contact-linkContainer-phone">
-                    <h3>Vous pouvez nous contacter par téléphone ou sur Whatsapp via ce numéro:</h3>
-                    <p>06 66 66 66 66</p>
+                    <h3 class="contact-subTitle">Vous pouvez nous contacter par téléphone ou sur <span style="color: green;">Whatsapp</span> via ce numéro:</h3>
+                    <p class="contact-link">06 66 66 66 66</p>
                 </div>
 
                 <div class="contact-linkContainer-email">
-                    <h3>Egalement sur cette adresse email:</h3>
-                    <p>sophygièneTEST@gmail.com</p>
+                    <h3 class="contact-subTitle">Egalement sur cette adresse email:</h3>
+                    <p class="contact-link">sophygièneTEST@gmail.com</p>
                 </div>
 
                 <div class="contact-linkContainer-title">
-                    <h3>Vous pouvez aussi nous retrouver sur nos réseaux sociaux</h3>
+                    <h3 class="contact-subTitle">Vous pouvez aussi nous retrouver sur nos réseaux sociaux:</h3>
                 </div>
 
                 <div class="contact-linkContainer-social">
