feat(partner): partner section added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p class="navbar_rightSide-number">06 66 66 66 66</p>
         </div>
     </div>
+
     <!-- header -->
     <header>
         <div class="headerTitle">
@@ -34,8 +35,6 @@
                 </svg>
             </a>
         </div>
-        
-        
     </header>
 
     <!-- main -->
@@ -48,6 +47,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d827.7820482562531!2d-6.917776170776893!3d33.912100111765795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x728ad19050d94103!2zMzPCsDU0JzQzLjYiTiA2wrA1NScwMi4wIlc!5e0!3m2!1sfr!2sma!4v1655469542642!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
+
         <!-- product -->
         <section class="product" id="work">
             <h2 class="product-title">Nos traîtements</h2>
@@ -60,6 +60,18 @@
                 <li><span>Désinfection - (stérilisation, traîtement anti-covid19 etc.)</span></li>
             </ul>
         </section>
+
+        <!-- partner -->
+        <section class="partner">
+            <h2 class="partner-title">Ils nous font confiance !</h2>
+            <div class="partner-imgContainer">
+                <img src="./images/partner_1.jpeg" alt="" class="img-partner">
+                <img src="./images/partner_2.jpg" alt="" class="img-partner">
+                <img src="./images/partner_3.jpg" alt="" class="img-partner">
+                <img src="./images/partner_4.jpeg" alt="" class="img-partner">
+            </div>
+        </section>
+
         <!-- contact -->
         <section class="contact" id="contact">
             <h2 class="contact-title">Contact</h2>
