fix(about, product): change lorem ipsum by real text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- about -->
         <section class="about" id="about">
             <h2 class="about-title">Qui sommes-nous ?</h2>
-            <p class="about-text">Lorem ipsum dolor sit amet <strong>adipisicing</strong> elit. Voluptatem quia delectus hic laudantium. A modi fuga nesciunt culpa eligendi totam <strong>consequatur</strong> eum quae sit facere, qui deleniti quo quisquam repellat quidem tenetur? Consectetur <strong>consequatur</strong> mollitia sed impedit corrupti autem aut ex! Necessitatibus sint quo aliquid impedit qui deserunt porro harum quia quis ipsa totam reprehenderit, fugiat enim quidem eaque nesciunt reprehenderit. Harum, sapiente ut. Assumenda minus id, aut ipsa similique perspiciatis dolorum illum eligendi dolorem Numquam magni voluptate <strong>consequatur</strong> beatae excepturi perferendis consectetur laborum!</p>
+            <p class="about-text">Sophygiène est une entreprise spécialisée dans l'hygiène, fondée en 2018 par Soufiane Abdellaoui expert dans le domaine. Au cours de ces dernières années, nous avons eu l'occasion de travailler dans quasiment toutes les régions du Maroc, avec des partenaires qui ont toujours été pleinement satisfait de nos méthodes de travail. Nos exerçons principalement dans les régions de Rabat et de Casablanca, nos bureaux se trouvant par ailleurs à Témara comme indiqué ci-dessous.</p>
             <div class="about-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d827.7820482562531!2d-6.917776170776893!3d33.912100111765795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x728ad19050d94103!2zMzPCsDU0JzQzLjYiTiA2wrA1NScwMi4wIlc!5e0!3m2!1sfr!2sma!4v1655469542642!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -51,11 +51,11 @@
         <!-- product -->
         <section class="product" id="work">
             <h2 class="product-title">Nos traîtements</h2>
-            <p class="product-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates rerum optio, soluta inventore id mollitia adipisci, at nemo beatae cumque accusantium quasi corporis magnam iure?</p>
+            <p class="product-text">Avant chaque traîtement, nous effectuons une étude de terrain afin de proposer la solution la plus adaptée à la situation. Voici quelques exemples de traîtement que nous pratiquons le plus:</p>
             <ul class="product-list">
                 <li><span>Dératisation - (rats, serpents, taupes etc.)</span></li>
                 <li><span>Désinsectisation - (cafards, blattes, moustiques etc.)</span></li>
-                <li><span>Capture des chiens et chats érrants</span></li>
+                <li><span>Capture de chiens et chats érrants</span></li>
                 <li><span>Dépigeonnisation - (pigeons et autres volatiles)</span></li>
                 <li><span>Désinfection - (stérilisation, traîtement anti-covid19 etc.)</span></li>
             </ul>
