feat(global): link added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <img src="./images/logoCropped.png"  class="navbar_middleSide-logo"/>
         </div>
         <div class="navbar_rightSide">
-            <img src="./images/whatsapp.png" class="navbar_rightSide-logo" />
-            <p class="navbar_rightSide-number">06 66 66 66 66</p>
+            <a href="https://wa.me/message/IWNUGCAGRBZQL1" class="navbar_rightSide-logo" target="_blank"> <img src="./images/whatsapp.png" class="navbar_rightSide-logo" /> </a>
+            <p class="navbar_rightSide-number">06 61 60 57 03</p>
         </div>
     </div>
 
@@ -77,8 +77,8 @@
             <h2 class="contact-title">Contact</h2>
             <div class="contact-linkContainer">
                 <div class="contact-linkContainer-phone">
-                    <h3 class="contact-subTitle">Vous pouvez nous contacter par téléphone ou sur <span style="color: green;">Whatsapp</span> via ce numéro:</h3>
-                    <p class="contact-link">06 66 66 66 66</p>
+                    <h3 class="contact-subTitle">Vous pouvez nous contacter par téléphone ou sur <a href="https://wa.me/message/IWNUGCAGRBZQL1" target="_blank"> <span style="color: green;">Whatsapp</span> </a> via ce numéro:</h3>
+                    <p class="contact-link">06 61 60 57 03</p>
                 </div>
 
                 <div class="contact-linkContainer-email">
@@ -93,11 +93,11 @@
                 <div class="contact-linkContainer-social">
 
                     <div class="contact-linkContainer-social-fb">
-                        <img src="images/fb.png" alt="facebook" class="contact-icon-fb">
+                        <a href="https://www.facebook.com/Sophhygien.ma/" target="_blank"> <img src="images/fb.png" alt="facebook" class="contact-icon-fb"> </a>
                     </div>
     
                     <div class="contact-linkContainer-social-insta">
-                        <img src="images/insta.png" alt="instagram" class="contact-icon-insta">
+                        <a href="https://www.instagram.com/invites/contact/?i=s2z4ho9vil9d&utm_content=fpwiw4m" target="_blank"> <img src="images/insta.png" alt="instagram" class="contact-icon-insta"> </a>
                     </div>
     
                     <div class="contact-linkContainer-social-ytb">
@@ -117,7 +117,7 @@
         </div>
 
         <div>
-            <p>Design, coding and optimisation by one webmaster. Click here to visit LinkedIn profil.</p>
+            <p>Design, coding and optimisation by one webmaster. <a href="https://www.linkedin.com/in/salim-camara-879b411b8/" target="_blank" style="text-decoration: underline;">Click here to visit LinkedIn profil.</a></p>
         </div>
     </footer>
 
