feat(head): all <meta> added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/logoCropped.png">
+    <meta name="keywords" content="dératisation, désinfection, désinsectisation, covid, covid-19, coronavirus, rat, carfard, souris, guêpe, abeille, mouche, moustique, fourmie, pigeon, taupe, chien érrant, chat érrant, insecte, hygiène, virus ">
+    <meta name="description" content="Sophygiène est une entreprise spécialisée dans l'hygiène, fondée en 2018 par Soufiane Abdellaoui expert dans le domaine. Au cours de ces dernières années, nous avons eu l'occasion de travailler dans quasiment toutes les régions du Maroc, avec des partenaires qui ont toujours été pleinement satisfait de nos méthodes de travail. Nos exerçons principalement dans les régions de Rabat et de Casablanca, nos bureaux se trouvant par ailleurs à Témara comme indiqué ci-dessous.">
+    <meta property="og:title" content="Sophygiène - Dératisation, désinsectisation, désinfection...">
+    <meta property="og:description" content="Sophygiène est une entreprise spécialisée dans l'hygiène, fondée en 2018 par Soufiane Abdellaoui expert dans le domaine. Au cours de ces dernières années, nous avons eu l'occasion de travailler dans quasiment toutes les régions du Maroc, avec des partenaires qui ont toujours été pleinement satisfait de nos méthodes de travail. Nos exerçons principalement dans les régions de Rabat et de Casablanca, nos bureaux se trouvant par ailleurs à Témara comme indiqué ci-dessous.">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Sophygène</title>
+    <title>Sophygène - Dératisation, désinsectisation, désinfection...</title>
 </head>
 <body>
     <!-- navbar -->
@@ -28,7 +33,7 @@
     <header>
         <div class="headerTitle">
             <img src="images/logoFull.png" class="headerTitle_logo"/>
-            <h1 class="headerTitle_text">Dératisation, désinsectisation, traîtement anti Covid-19</h1>
+            <h1 class="headerTitle_text">Dératisation, désinsectisation, désinfection...</h1>
             <a href="#about">
                 <svg xmlns="http://www.w3.org/2000/svg" class="headerArrow" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
@@ -83,7 +88,7 @@
 
                 <div class="contact-linkContainer-email">
                     <h3 class="contact-subTitle">Egalement sur cette adresse email:</h3>
-                    <p class="contact-link">sophygièneTEST@gmail.com</p>
+                    <p class="contact-link">sophhygiene@gmail.com</p>
                 </div>
 
                 <div class="contact-linkContainer-title">
